--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
     <header>
 
-    <div class="container">
-        <div class="head"> Zaharatu Stationers</div>
+    <div>
+        <div class="head"> <h2>Zaharatu Stationers</h2></div>
+
+        <img src="/home/abiton/website/stationery.jpg">
+
         <div class="sub">The world class solutions for all your academic, 
             office, school and proffessional stationery. A revolution of dynamic 
         and classic learning aids. </div>
@@ -24,8 +28,8 @@
         <li>Our Services</li>
         <li>Our Branches</li>
     </ul>
-    <img src=""
 
+    
 </header>
 
 
