--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="head"> <h2>Zaharatu Stationers</h2></div>
 
         <img src="/home/abiton/website/stationery.jpg">
+        <img src="/home/abiton/website/station.jpg">
 
+        
         <div class="sub">The world class solutions for all your academic, 
             office, school and proffessional stationery. A revolution of dynamic 
         and classic learning aids. </div>
@@ -32,7 +34,14 @@
     
 </header>
 
+<p class="images">
 
+    <img src="/home/abiton/website/class.jpg" ><div>school touch </div>
+    <img src="/home/abiton/website/meeting.jpg">office flare
+    <img src="/home/abiton/website/office.jpg">officef lare
+    <img src="/home/abiton/website/computer.jpg">real tech 
+
+</p>
 
 
 
