--- a/index.html
+++ b/index.html
@@ -13,37 +13,49 @@
     <header>
 
     <div>
-        <div class="head"> <h2>Zaharatu Stationers</h2></div>
+        <div class="head"> <h2>All your office, school, and work stationery here!</h2></div>
 
         <img src="/home/abiton/website/stationery.jpg">
         <img src="/home/abiton/website/station.jpg">
 
         
-        <div class="sub">The world class solutions for all your academic, 
-            office, school and proffessional stationery. A revolution of dynamic 
-        and classic learning aids. </div>
+        <div class="sub">The world class stationery solutions for all your academic, 
+            office, and proffessional aids. Trusted brands for a decade now. </div>
     </div>
-    <button>contact us</button>
+    <button>place order now</button>
 
-    <ul class="links">
-        <li>Our Products</li>
-        <li>Our Services</li>
-        <li>Our Branches</li>
-    </ul>
+    <button>Get a %Discount!</button>
 
     
 </header>
 
-<p class="images">
+<div class="images">
 
-    <img src="/home/abiton/website/class.jpg" ><div>school touch </div>
-    <img src="/home/abiton/website/meeting.jpg">office flare
-    <img src="/home/abiton/website/office.jpg">officef lare
-    <img src="/home/abiton/website/computer.jpg">real tech 
+    <img src="/home/abiton/website/class.jpg" >
+    <img src="/home/abiton/website/office.jpg">
+    <img src="/home/abiton/website/computer.jpg"> 
+</div>
+
+<div class="info">
+    a thought on school needs....
+    a real office setup...
+    a thought of technology...
+</div>
+<p >
+
+    <div class="body">A platform where affordable, reliable
+         and effecient service is provided for quality
+          products...stationery world!</div>
 
 </p>
 
+<p>
+<footer>
+    <button>email us</button>
+    <button>subscribe now</button>
+</footer>
 
 
+</p>
 </body>
 </html>
