--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="logo">Zaha-tech
             <img src="/home/abiton/website/images/logo.jpg">
-            <div class="base">The ideal business partner!</div>
+            <div class="base"><em>The ideal business partner!</em> </div>
         </div>
 
     <div>
@@ -26,9 +26,9 @@
         <div class="sub">The world class stationery solutions for all your academic, 
             office, and proffessional aids. Trusted brands for a decade now. </div>
     </div>
-    <button><strong>place order now</strong></button>
+    <button><strong>order now</strong></button>
 
-    <button><strong>Get a %Discount!</strong></button>
+    <button><strong>Get a Discount!</strong></button>
 
     
 </header>
@@ -45,6 +45,10 @@
     a real office setup...
     a thought of technology...
 </div>
+
+<p>
+    <div class="brand">think <h1>Zaha-tech</h1>...your ideal partner!</div>
+</p>
 <p>
     <div class="body">A platform where <strong>affordable</strong>,<strong>reliable</strong>  
         and <strong>effecient</strong> service is provided for quality
