--- a/Role-Play-Game/index.html
+++ b/Role-Play-Game/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
        <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
-       <link rel="stylesheet" href="rpg-styles.css">
+       <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
@@ -22,7 +22,7 @@
         <button id="attack-button">Attack</button>
     </section>
    
-    <script src="rpg-java.js" type="module"></script>
+    <script src="main.js" type="module"></script>
 
 </body>
 </html>
