--- a/blackjack-game/index.html
+++ b/blackjack-game/index.html
@@ -15,9 +15,11 @@
         <p id="cards-el">Card:</p>
         <p id="sum-el">Sum:</p>
         <div class="buttons">
-            <button id="start" onclick="startGame()">START GAME</button>
-             <button id="new" onclick="newCard()">NEW CARD</button>
+            <button id="start">START GAME</button>
+             <button id="new">NEW CARD</button>
+             <button id="reset">RESET</button>
         </div>
+        <p id="player-el">Player</p>
     </div>
 
 
