--- a/carousel/index.html
+++ b/carousel/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carousel</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    
-    <div class="carousel-item visible">
+    <div id="carousel">
 
+    <div class="carousel-item carousel-item-visible"> <span class="message">My dream Beach Holiday</span>
+        <img src="/Landing-Page/carousel/img/beach.jpg" alt="with beach" >
     </div>
+
+    <div class="carousel-item"><span class="message">My dream Cruise Holiday</span>
+        <img src="/Landing-Page/carousel/img/cruise.jpg" alt="with water">
+    </div>
+
+    <div class="carousel-item"><span class="message">My dream Snow Holiday</span>
+        <img src="/Landing-Page/carousel/img/snow.jpg" alt="with snow">
+    </div>
+
+    <div class="carousel-actions">
+        <button id="carousel-button-prev" aria-label="Previous Slide"> < </button>
+        <button id="carousel-button-next" aria-label="Next Slide"> > </button>
+    </div>
+
+    <div class="carousel-nav">
+        <button class="carousel-indicators current-slide"></button>
+        <button class="carousel-indicators"></button>
+        <button class="carousel-indicators"></button>
+    </div>
+</div>
+
+<script src="main.js"></script>
 </body>
 </html>
