--- a/carousel/index.html
+++ b/carousel/index.html
@@ -10,16 +10,28 @@
 <body>
     <div id="carousel">
 
-    <div class="carousel-item carousel-item-visible"> <span class="message">My dream Beach Holiday</span>
+    <div class="carousel-item carousel-item-visible"> <span class="message">My dream Beach Holiday</span><span class="place">Port Villa, Vanuatu</span>
         <img src="/Landing-Page/carousel/img/beach.jpg" alt="with beach" >
     </div>
 
-    <div class="carousel-item"><span class="message">My dream Cruise Holiday</span>
+    <div class="carousel-item"><span class="message">My dream Cruise Holiday</span><span class="place-america">Pacific Ocean, America</span>
         <img src="/Landing-Page/carousel/img/cruise.jpg" alt="with water">
     </div>
 
-    <div class="carousel-item"><span class="message">My dream Snow Holiday</span>
+    <div class="carousel-item"><span class="message">My dream Snow Holiday</span><span class="place">Yellow City, Canada</span>
         <img src="/Landing-Page/carousel/img/snow.jpg" alt="with snow">
+    </div>
+
+    <div class="carousel-item"><span class="message">My dream Hiking Holiday</span><span class="place-india">Himalaya, India</span>
+        <img src="/Landing-Page/carousel/img/mountain-1.jpg" alt="with mountain">
+    </div>
+
+    <div class="carousel-item"><span class="message-brazil">My dream Nature Holiday</span> <span class="place-brazil">Amazon, Brazil</span>
+        <img src="/Landing-Page/carousel/img/nature.jpg" alt="with mountain">
+    </div>
+
+    <div class="carousel-item"><span class="message">My dream Hotel Holiday</span> <span class="place-france">Paris, France</span>
+        <img src="/Landing-Page/carousel/img/hotel.jpg" alt="with mountain">
     </div>
 
     <div class="carousel-actions">
@@ -29,6 +41,9 @@
 
     <div class="carousel-nav">
         <button class="carousel-indicators current-slide"></button>
+        <button class="carousel-indicators"></button>
+        <button class="carousel-indicators"></button>
+        <button class="carousel-indicators"></button>
         <button class="carousel-indicators"></button>
         <button class="carousel-indicators"></button>
     </div>
