--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -22,12 +22,12 @@
            
            <div class="green-tick">
             <!-- Bullets with green tick -->
-            <div class="bullets"><br> <img src="/landing-page/img/tick.png" class="tick"> <strong>  Software Applications </div> 
-           <div class="bullets"> <br> <img src="/landing-page/img/tick.png" class="tick"> Web Development</strong>  
+            <div class="bullets"><br> <img src="/Landing-Page/landing-page/img/tick.jpg" class="tick"> <strong>  Software Applications </div> 
+           <div class="bullets"> <br> <img src="/Landing-Page/landing-page/img/tick.jpg" class="tick"> Web Development</strong>  
             <strong> </div>
-           <div class="bullets"> <br> <img src="/landing-page/img/tick.png" class="tick"> Robotics</strong>
+           <div class="bullets"> <br> <img src="/Landing-Page/landing-page/img/tick.jpg" class="tick"> Robotics</strong>
              </div>
-             <div class="bullets"> <strong><br> <img src="/landing-page/img/tick.png" class="tick"> Machine Learning</strong>
+             <div class="bullets"> <strong><br> <img src="/Landing-Page/landing-page/img/tick.jpg" class="tick"> Machine Learning</strong>
              </div>
            
              </div>
