--- a/Role-Play-Game/index.html
+++ b/Role-Play-Game/index.html
@@ -19,7 +19,7 @@
         </div>    
     </main>
     <section id="actions">
-        <button id="attack-button" type="reset">Attack</button>
+        <button id="attack-button" type="reset">attack</button>
     </section>
    
     <script src="main.js" type="module"></script>
