--- a/boredBot/index.html
+++ b/boredBot/index.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bored-Bot</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.google.com/specimen/Kalam" rel="stylesheet">
 </head>
 <body>
-    
-<div id="activity"></div>
-<div id="random-ideas"></div>
-<button id="get-idea"></button>
 
+    <div id="container">
 
+        <p1 id="activity">✨ relief-Bot 🤖</p1>
+        <h2 id="random-ideas">Find something to do?</h2>
+        <button id="get-idea"></button>
+
+    </div>
 
     <script src="main.js"></script>
 </body>
