--- a/color-scheme-generator/index.html
+++ b/color-scheme-generator/index.html
@@ -29,10 +29,10 @@
 <button id="get-color" class="scheme-btn" type="submit">get color scheme</button>
 </form>
 
-<div class="info"> <p id="info-copy">Click the code to copy</p></div>
+<div class="info"> <button id="info-copy">Click the code to copy</button></div>
 
-
-<div id="color-schemes"></div>
+<div id="color-schemes"></div> 
+<!-- the Div where the data from API is landing -->
 
 
 
