--- a/war-game/index.html
+++ b/war-game/index.html
@@ -9,11 +9,17 @@
 </head>
 <body>
     
+<div class="container">
+<button id="new-deck">New Deck</button>
 
-<button id="new-deck">New Deck, Please!</button>
+<div id="cards">
+    <div class="card-position"></div>
+    <div class="card-position"></div>
+</div>
 
+<button id="new-card">Draw</button>
 
-
+</div>
 
 
 
