--- a/war-game/index.html
+++ b/war-game/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>War Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,6 +13,7 @@
 <button id="new-deck">New Deck</button>
 
 <div id="cards">
+    <h2 id="header">Game of War</h2>
     <div class="card-position"></div>
     <div class="card-position"></div>
 </div>
