--- a/war-game/index.html
+++ b/war-game/index.html
@@ -10,12 +10,22 @@
 <body>
     
 <div class="container">
-<button id="new-deck">New Deck</button>
+    <div class="cards-order">
+        <button id="new-deck">New Deck</button>
+       
+       <div class="display"> 
+        <p id="cards-available">Cards:</p>
+        <p id="remaining-cards">Remaining Cards:</p>
+    </div>
+    </div>
+
 <h2 id="header">Game of War</h2>
 
 <div id="cards">
+    <p id="computer-score">Computer Score:</p>
     <div class="card-position"></div>
     <div class="card-position"></div>
+    <p id="my-score">Me:</p>
 </div>
 
 <button id="new-card">Draw</button>
