--- a/war-game/index.html
+++ b/war-game/index.html
@@ -10,23 +10,25 @@
 <body>
     
 <div class="container">
+
     <div class="cards-order">
         <button id="new-deck">New Deck</button>
        
        <div class="display"> 
-        <p id="cards-available">Cards:</p>
-        <p id="remaining-cards">Remaining Cards:</p>
+        <p id="cards-available">Cards: 0</p>
+        <p id="remaining-cards">Remaining Cards:  </p>
     </div>
-    </div>
+</div>
 
 <h2 id="header">Game of War</h2>
+<p id="computer-score">Computer Score: 0</p>
 
 <div id="cards">
-    <p id="computer-score">Computer Score:</p>
     <div class="card-position"></div>
     <div class="card-position"></div>
-    <p id="my-score">Me:</p>
 </div>
+
+<p id="my-score">Me: 0</p>
 
 <button id="new-card">Draw</button>
 
