--- a/dashboard-api/index.html
+++ b/dashboard-api/index.html
@@ -8,12 +8,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <main>
+  
+        <div class="curr-weath">
+            <p id="currency">Crypto Currency</p>
+            <p id="weather">Weather</p>
+        </div> 
+
+<div class="time">TIME IS HERE</div>
+
+<p id="author" class="author-color">Author:</p>
 
 
-
-
-
+</main>
 
     <script src="main.js"></script>
 </body>
