--- a/dashboard-api/index.html
+++ b/dashboard-api/index.html
@@ -11,7 +11,11 @@
     <main>
   
         <div class="curr-weath">
-            <p id="currency">Crypto Currency</p>
+            <div id="currency">
+                <div id="crypto-top"></div>
+                
+              
+            </div>
             <p id="weather">Weather</p>
         </div> 
 
