--- a/dashboard-api/index.html
+++ b/dashboard-api/index.html
@@ -16,9 +16,7 @@
                 <p></p>
               
             </div>
-            <div id="weather">
-                <p>Weather</p>
-            </div>
+            <div id="weather">  </div>
             
         </div> 
 
