--- a/dashboard-api/index.html
+++ b/dashboard-api/index.html
@@ -19,8 +19,10 @@
             <div id="weather">  </div>
             
         </div> 
-
-<div id="time">TIME IS HERE</div>
+<div id="centre">
+    <p id="time"></p>
+    <p id="motivation"></p>
+</div>
 
 <p id="author" class="author-color">Author:</p>
 
