--- a/flexbox-card/index.html
+++ b/flexbox-card/index.html
@@ -13,13 +13,13 @@
     <img src="/Landing-Page/flexbox-card/img/flex-image.jpg" class="image"/>
 
     <div class="main">
-             <div class="tips-heading">7 tech tips and tricks that you <br> need to know</div>
-            <div class="tips-message">Using these 7 proven tips from experts in the industry, you can save time, money and more!</div>
+             <div class="tips-heading">7 tech tips and tricks that you need to know</div>
+            <div class="tips-message">Using these 7 proven tips from experts in the industry, you  can save time, money and more!</div>
   
 
         <div class="bottom">
-             <div class="read">15 <br>minute <br>read</div>
-             <div><button>read more</button></div>
+             <p class="read"><span>15</span> <br>minute <br>read</p>
+             <a href="#" class="card-btn">read more</a>
         </div>
     </div>
 </div>
