--- a/dashboard-api/index.html
+++ b/dashboard-api/index.html
@@ -26,7 +26,7 @@
 
 <p id="author" class="author-color">Author:</p>
 
-
+<div id="prayer-times"></div>
 </main>
 
     <script src="main.js"></script>
