--- a/dashboard-api/index.html
+++ b/dashboard-api/index.html
@@ -24,9 +24,12 @@
     <p id="motivation"></p>
 </div>
 
-<p id="author" class="author-color">Author:</p>
+<div class="bottom">
+        <p id="author" class="author-color">Author:</p>
 
-<div id="prayer-times"></div>
+        <div id="prayer-times"></div>
+
+</div>
 </main>
 
     <script src="main.js"></script>
