--- a/my-profile/index.html
+++ b/my-profile/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <header>
+    <header class="header">
         <div class="logo">
             < abitondev >
             <!-- <img src="img/" alt=""> -->
@@ -147,7 +147,7 @@
         
         
         <!-- Footer -->
-        <footer>
+        <footer class="footer">
             <!-- putting icons for social media-->
             <a href="abitondev.gmail.com" class="footer__link">abitondev@gmail.com</a>
             <ul class="social-list">
