--- a/my-profile/index.html
+++ b/my-profile/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -149,55 +149,45 @@
         
         <!-- Footer -->
         <footer class="footer">
-            <!-- putting icons for social media-->
+            <!-- direct link to sending email-->
             <a href="abitondev.gmail.com" class="footer__link">abitondev@gmail.com</a>
             <ul class="social-list">
+
+                <!-- direct link to facebook -->
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://codepen.io">
-                    <i class="fab fa-codepen"></i> </a>
+                    <a class="social-list__link" href="https://www.facebook.com/abiton.padera">
+                    <i class="fab fa-facebook"></i> </a>
                 </li>
+
+                <!-- link to directly sending message to whatsapp -->
                 <li class="social-list__item">
-                    <a class="social-list__link" href="http://dribbble.com">
-                        <i class="fab fa-dribbble"></i>
+                    <a class="social-list__link" href="http://wa.me/0027761272025">
+                        <i class="fab fa-whatsapp"></i>
                     </a> </li>
+
+                        <!-- link to directly send a twit message -->
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://twitter.com">
+                    <a class="social-list__link" href="https://twitter.com/intent/tweet?screen_name=abitondev&ref_src=twsrc%5Etfw" 
+                    class="twitter-mention-button" data-show-count="false">Tweet to @abitondev</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         <i class="fab fa-twitter"></i>
                     </a></li>
+
+                    <!-- direct link to my work published at Github -->
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://github.com">
+                    <a class="social-list__link" href="https://github.com/Abiton198">
                         <i class="fab fa-github"></i>   </a></li>
             </ul>
+
+            <!-- <li class="social-list__item">
+                <a class="social-list__link" href="https://www.instagram.com/abitonpadera/">
+                <i class="fab fa-instagram"></i> </a>
+            </li> -->
         </footer>
         
         <script src="main.js"></script>
     </body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </body>
-<html
+</html>
