--- a/carousel/index.html
+++ b/carousel/index.html
@@ -11,15 +11,15 @@
     <div id="carousel">
 
     <div class="carousel-item carousel-item-visible">
-        <img src="/carousel/img/beach.jpeg" alt="image with palm trees">
+        <img src="../carousel/img/beach.jpeg" alt="">
     </div>
 
     <div class="carousel-item">
-        <img src="/carousel/img/cruise.jpeg" alt="image with a ship">
+        <img src="../carousel/img/cruise.jpeg" alt="">
     </div>
 
     <div class="carousel-item">
-        <img src="/carousel/img/snow.jpeg" alt="image with guitar">
+        <img src="../carousel/img/snow.jpeg" alt="">
     </div>
 
     <div class="carousel-actions">
